--- a/NET ART/style.css
+++ b/NET ART/style.css
@@ -26,13 +26,62 @@ html {
  body {
     height: 100%;
  }
+
+
+
+ /* /////UPLOADED FONTS//// */
  
+ @font-face {
+  font-family: 'kiera';
+  src: url('FONTS/kiera.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'panic';
+  src: url('FONTS/panic.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'spongeboy';
+  src: url('FONTS/spongeboy.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'adelia';
+  src: url('FONTS/adelia.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'boohong';
+  src: url('FONTS/boohong.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'aurora';
+  src: url('FONTS/aurora.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'marola';
+  src: url('FONTS/marola.ttf') format('truetype');
+}
+
+
+
+
+
+
+
+
+
+
+
  
  body {
      font-size: 100px;
      /* //////UNHIGHLIGHT THIS PART FOR BG ANIMATION ///////// */
      animation-name: bgcolor;
-     animation-duration: 20s;
+     animation-duration: 15s;
      animation-iteration-count: infinite;
      animation-direction: reverse;
      animation-fill-mode: backwards;
@@ -127,10 +176,10 @@ html {
     display: inline-block;
     background-color: rgb(206, 49, 99);
     animation-name: stretching;
-    animation-duration: 7s;
+    animation-duration: 50s;
     animation-iteration-count: infinite;
     animation-direction: reverse;
-    animation-fill-mode: backwards;
+    animation-fill-mode: both, forwards, none;
     -ms-zoom-animation: default;
   }
   
